# PhoneSmart

./: README.md  requirements.txt
hocusfocus/: pyproject.toml
hocusfocus/src/hocusfocus/: crew.py  main.py
hocusfocus/src/hocusfocus/config/: agents.yaml  tasks.yaml
